Added getResolveObjects, deprecated postResolveObjects.
