# apps/api/src/lambdas/dynamic.ts
@@ -24,6 +24,7 @@ import getNodeLineage from "../operations/getNodeLineage"
 import getNodes from "../operations/getNodes"
 import getResolveObject from "../operations/getResolveObject"
 import postCollection from "../operations/postCollection"
+import getResolveObjects from "../operations/getResolveObjects"
 import postResolveObjects from "../operations/postResolveObjects"
 import { PgClientService } from "../services/PgClientService"
 import getEmbedParameters from "./parameters/getEmbedParameters"
@@ -258,6 +259,7 @@ const route: (event: APIGatewayProxyEvent) => Promise<APIGatewayProxyResult> = (
                         {
                             ...getParameters(event.headers, ["accept"]),
                             ...getParameters(event.pathParameters, ["authority", "namespace", "objectID"], true),
+                            ...getParameters(event.queryStringParameters, ["build", "objectIDs"]),
                             ...getEmbedParameters(event.queryStringParameters, NODE_EMBEDDED_PARAMETERS),
                         },
                         SERVICE,
@@ -269,6 +271,18 @@ const route: (event: APIGatewayProxyEvent) => Promise<APIGatewayProxyResult> = (
             }
         } else {
             switch (event.httpMethod) {
+                case "GET": {
+                    return getResolveObjects(
+                        {
+                            body: event.body ?? undefined,
+                            ...getParameters(event.headers, ["accept", "content-type"]),
+                            ...getParameters(event.pathParameters, ["authority", "namespace"]),
+                            ...getParameters(event.queryStringParameters, ["build"]),
+                            ...getEmbedParameters(event.queryStringParameters, NODE_EMBEDDED_PARAMETERS),
+                        },
+                        SERVICE,
+                    )
+                }
                 case "POST": {
                     return postResolveObjects(
                         {
